@@ -21,25 +21,71 @@
                 </execution>
             </executions>
             <configuration>
-                <mainClass>C:\Users\tolya\Testing\src\main\java\Testing</mainClass>
+                <mainClass>servlet.Testing</mainClass>
             </configuration>
         </plugin>
+
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <systemProperties>
+                        <JAVA_OPTS>
+                            -Xms256m -Xmx512m -XX:MaxPermSize=256m
+                        </JAVA_OPTS>
+                    </systemProperties>
+                    <path>/webapp</path>
+                    <port>8080</port>
+                </configuration>
+            </plugin>
+
+
         </plugins>
     </build>
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-parent</artifactId>
+            <version>2.3.5.RELEASE</version>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.3.5.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jersey</artifactId>
+            <version>2.3.5.RELEASE</version>
+        </dependency>
+
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations-java5</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.200</version>
         </dependency>
+
     </dependencies>
 
 
